[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/skills/ratbomb_8.png" type="Texture" id=1]
[ext_resource path="res://scripts/skills/RatBomb.gd" type="Script" id=2]
[ext_resource path="res://sprites/skills/ratbomb_explode.png" type="Texture" id=3]
[ext_resource path="res://sound/fx/Sound/SoundFX/double-squeak-2-103875.mp3" type="AudioStream" id=4]
[ext_resource path="res://sound/fx/Sound/SoundFX/chew-21768.mp3" type="AudioStream" id=5]
[ext_resource path="res://sound/fx/Sound/SoundFX/hq-explosion-6288.mp3" type="AudioStream" id=6]
[ext_resource path="res://fonts/CONSOLA.TTF" type="DynamicFontData" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.13179, 1.44332 )

[sub_resource type="Animation" id=6]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Ratbomb:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "apply_atk_hitbox"
}, {
"args": [  ],
"method": "wait_attack_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("FX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.5 )
}

[sub_resource type="Animation" id=7]
resource_name = "Explode"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("RatbombExplode:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "apply_explode_hitbox"
}, {
"args": [  ],
"method": "wait_explode_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("FX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ratbomb:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RatbombExplode:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ratbomb:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("FX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="CircleShape2D" id=8]
radius = 7.38392

[sub_resource type="CircleShape2D" id=3]
radius = 32.3944

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.372549, 0.811765, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.568627, 0.258824, 0.227451, 1 )

[node name="RatBomb" type="KinematicBody2D"]
scale = Vector2( 3.11782, 3.11782 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Ratbomb" type="Sprite" parent="."]
position = Vector2( -0.641474, -12.188 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
hframes = 10
vframes = 10
frame = 21

[node name="RatbombExplode" type="Sprite" parent="."]
visible = false
position = Vector2( -4.49032, -0.320737 )
scale = Vector2( 0.436202, 0.436202 )
texture = ExtResource( 3 )
hframes = 5
vframes = 3
frame = 5

[node name="Col" type="CollisionShape2D" parent="."]
position = Vector2( -4.58818e-07, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 6 )
anims/Explode = SubResource( 7 )
anims/RESET = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="HitboxAttack" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxAttack"]
position = Vector2( 9.53674e-07, 0 )
shape = SubResource( 8 )

[node name="HitboxExplode" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxExplode"]
shape = SubResource( 3 )

[node name="FX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="HP" type="ProgressBar" parent="."]
margin_left = -10.5843
margin_top = 4.0
margin_right = 84.4157
margin_bottom = 21.0
rect_scale = Vector2( 0.235726, 0.235726 )
custom_fonts/font = SubResource( 9 )
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
max_value = 2.0
value = 2.0

[connection signal="body_entered" from="HitboxAttack" to="." method="_on_HitboxAttack_body_entered"]
[connection signal="body_exited" from="HitboxAttack" to="." method="_on_HitboxAttack_body_exited"]
[connection signal="body_entered" from="HitboxExplode" to="." method="_on_HitboxExplode_body_entered"]
[connection signal="body_exited" from="HitboxExplode" to="." method="_on_HitboxExplode_body_exited"]
